docroot/fsfw.css
/* ... */
ul#navigation > li.floated-icon {
    float: right;
    position: relative;
    top: 2px;
}

ul.navigation > li > a > i.fa {
    font-size: 1.8rem;
}

ul.navigation > li.turquoise > a:hover,
ul.navigation > li.turquoise > a:active,
ul.navigation > li.turquoise > a:focus {
    background: #28ADB8;
    color: white !important;
}

ul.navigation > li.violet > a:hover,
ul.navigation > li.violet > a:active,
ul.navigation > li.violet > a:focus {
    background: #654BC7;
    color: white !important;
}

ul.navigation > li.green > a:hover,
ul.navigation > li.green > a:active,
ul.navigation > li.green > a:focus {
    background: #6BBB00;
    color: white !important;
}

ul.navigation > li.twitter-blue > a:hover,
ul.navigation > li.twitter-blue > a:active,
ul.navigation > li.twitter-blue > a:focus {
    background: #55ACEE;
    color: white !important;
}

ul.navigation > li.facebook-blue > a:hover,
ul.navigation > li.facebook-blue > a:active,
ul.navigation > li.facebook-blue > a:focus {
    background: #3B5998;
    color: white !important;
}

ul.navigation > li.diaspora-grey > a:hover,
ul.navigation > li.diaspora-grey > a:active,
ul.navigation > li.diaspora-grey > a:focus {
    background: #eee;
    color: white !important;
}

ul.navigation > li.github-black > a:hover,
ul.navigation > li.github-black > a:active,
ul.navigation > li.github-black > a:focus {
    background: #333333;
    color: white !important;
}

/********** condensed header layout for mobile **********/

/* This reverts some rules below, which apply to the content area, through !important. */

@media (max-width: 750px) {
    #sitelogo img {
        top: -10px;
    }
    #sticky-sitelogo {
        display: none;
    }

    #navigation-area {
        padding: 0 0.5rem;
    }
    ul#navigation {
        margin-left: 0;
    }

    h1 {
        margin-left: 1rem !important;
    }
}

/* On narrow screens, we break the navigation icons out of the navigation bar,
 * into a separate floating container. */

@media (max-width: 550px) {
    ul#navigation > li.floated-icon {
        display: none;
    }

    ul#mobile-navigation {
        display: block;
        position: absolute;
        top: -0.5rem;
        right: 1rem;
        box-shadow: 0 0 5px #CCC;
        border-radius: 5px;
        border: 1px solid #DDD;
        padding: 0.75rem 0 0.25rem 0;
        max-width: 6rem; /* two icons per 3rem */
        background: white;
    }

    #navigation-area {
        padding: 0;
        text-align: center;
    }
}

/********** content area **********/

#content-container {
    display: block;
    margin: 0 auto;
    max-width: 960px;
    box-sizing: border-box;
    background: white;
    box-shadow: 0 0 3px #CCC;
    padding: 0;
}

#content-container > section > * {
    margin: 1rem;
}
#content-container > section:not(.notopmargin):first-child > *:first-child {
    /* this placement is a bit more complicated because it needs to take the
     * overflowing sitelogo into account */
    margin-top: calc(100px - 3rem);
}

h1 {
    text-align: left;
    font-size: 200%;
}

#content-container > section:not(.notopmargin):first-child > h1:first-child {
    /* when the content starts with a <h1>, move it next to the overflowing sitelogo */
    padding-top: 0.2ex;
    margin-top: 0;
    margin-left: calc(150px + 2rem);
}

dl dd {
    margin-left: 2rem;
}

.hidden {
    display: none;
}

.important {
    font-size: 120%;
}

a:link {
    color: #28ADB8;
    text-decoration: none;
}

a:visited {
    color: #654BC7;
    text-decoration: none;
}

a:hover:link,
a:active:link,
a:focus:link {
    color: #6BBB00;
    text-decoration: underline;
}

a:hover:visited,
a:active:visited,
a:focus:visited {
    color: #654BC7;
    text-decoration: underline;
}




/********** special rules for themen.html **********/

#content-container section .imageheader {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    margin: 0;
    padding: 0;
    min-height: 200px;
    position: relative; /* for .imagelicense placement */
}

.imageheader h1 {
    margin: 1rem 0;
    margin-left: 1rem;
    display: inline-block;
    padding: 0.5rem 1rem;
    border-radius: 5px;
    line-height: 1.8rem;
    font-size: 2rem;
    font-weight: bold;
    color: white;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
}

/********** special rules for programm.html **********/

.abstract p {
    font-size: 90%;
    padding: 0 3rem;
}

@media(max-width: 30rem) {
    .abstract p {
        padding: 0 2rem;
    }
}

aside.header-link {
    float: right;
    font-size: 0.8rem;
    margin: 1rem;
    margin-top: 0.5rem !important;
}

/* We condense the header layout a bit on narrow screens because it really looks weird when these inline-blocks break to the next line. */
@media (max-width: 30rem) {
    .imageheader h1 {
        display: block;
        margin: 0 !important;
        border-radius: 0;
    }
}
@media (max-width: 25rem) {
    .imageheader h1 {
        font-size: 1.8rem;
    }
}
@media (max-width: 20rem) {
    .imageheader h1 {
        font-size: 1.6rem;
    }
}


a.imagelicense {
    display: inline-block;
    position: absolute;
    right: 0.5rem;
    bottom: 0.5rem;
}

a.imagelicense img {
    max-height: 1.5rem;
    vertical-align: middle;
    padding-left: 0.15rem;
}

section.turquoise h1 {
    background-color: #28ADB8;
}
section.violet h1 {
    background-color: #654BC7;
}
section.green h1 {
    background-color: #6BBB00;
}

section:first-child .imageheader h1 {
    margin-left: calc(150px + 2rem);
}

p.conclusion {
    font-weight: bold;
}

footer {
    background: #E8E8E8;
    padding: 0.5rem 1rem;
    box-sizing: border-box;
}

footer h2 {
    margin: 0.5rem 1rem;
    font-size: 1rem;
}

footer ul#imagecredit {
    margin: 0.5rem 1rem;
    padding-left: 0.5rem;
    list-style: none;
    font-size: 0.8rem;
}

footer ul#imagecredit li {
    padding: 0 0.5rem;
}

footer ul#imagecredit li:target {
    display: inline-block;
    background: #CCC;
}
/* ... */

